fix: correction - contrast (text and background)

--- a/style.css
+++ b/style.css
@@ -681,7 +681,7 @@ a {
 }
 
 p {
-    font-size: 14px;
+    font-size: 16px;
 }
 
 .style {
@@ -801,6 +801,7 @@ h4 {
 .btn-atomic-tangerine {
     background: #F3976C;
     font-weight: 800;
+    font-size: 20px;
     color: #FFFFFF!important;
 }
 
